logs/google-search-module-alt.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/google_search_module_alt'...
Compiling './lib/python3.5/site-packages/google_search_module_alt/Consolidated_Search_Results.py'...
***   File "./lib/python3.5/site-packages/google_search_module_alt/Consolidated_Search_Results.py", line 89
    print url_list
                 ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/google_search_module_alt/Pattern_Parsing.py'...
***   File "./lib/python3.5/site-packages/google_search_module_alt/Pattern_Parsing.py", line 61
    print 'website not found: ', web_address
                              ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/google_search_module_alt/Python_Google_Search_Retrieve.py'...
***   File "./lib/python3.5/site-packages/google_search_module_alt/Python_Google_Search_Retrieve.py", line 106
    print 'google_search_keyword not of type str or list'
                                                        ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/google_search_module_alt/Web_Crawler.py'...
***   File "./lib/python3.5/site-packages/google_search_module_alt/Web_Crawler.py", line 79
    print 'Now processing: ', website
                           ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/google_search_module_alt-0.1.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
